src/test/deca/context/valid/decl_deux_class_main.deca
class A{
}
class B{
}
{
A a;
B b;
}