src/test/deca/context/invalid/circular_include.deca
#include "circular_include2.deca"
class A {
int x;
B b;
}